data/derived/sp14/progs/unify/prog3313.ml.out
Characters 35-37:
  let _ = assoc (-1,"bob",[("ranjit",85);("william",23);("moose",44)]);;
                                     ^^
Error: This expression has type int but an expression was expected of type
         string
